# AlgoFusion-Final

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  __init__.py  requirements.txt
core/: __init__.py  state.py
docs/: ui-web.md
monitor/: __init__.py  dockerfile  file_monitor.py  requirements.txt
scripts/: algofusion_cli.py  analyze_final_json_run.py  bootstrap_portable.ps1  export_portable_bundle.ps1  run_pipeline_v2_from_archived_ocr.py  run_pipeline_v2_precomputed_smoke.py  run_pipeline_v2_smoke.py
shared/: __init__.py
tests/: conftest.py  test_prediction_normalizer.py  test_runtime_account_prot.py  test_runtime_account_prot_rows.py  test_runtime_account_prot_tail_repair.py  test_runtime_common.py  test_runtime_document_merge.py  test_runtime_document_parser_routing.py  test_runtime_document_type_resolution.py  test_runtime_final_json_builder.py  test_runtime_finalize.py  test_runtime_invoice_articles.py  test_runtime_invoice_cells.py  test_runtime_invoice_item_quality.py  test_runtime_invoice_items.py  test_runtime_invoice_overlay_builders.py  test_runtime_invoice_postprocess.py  test_runtime_invoice_raw.py  test_runtime_invoice_raw_blocks.py  test_runtime_invoice_raw_detection.py  test_runtime_invoice_row_detection.py  test_runtime_invoice_row_numeric_tail.py  test_runtime_invoice_row_standard.py  test_runtime_invoice_signatory.py  test_runtime_invoice_tail_repair.py  test_runtime_invoice_totals.py  test_runtime_invoice_units.py  test_runtime_invoice_vat_inference.py  test_runtime_module_entrypoints.py  test_runtime_money_words.py  test_runtime_numbers.py  test_runtime_page_signals.py  (+29 more)
(+236 files in other folders)
