[project]
name = "algofusion"
version = "0.2.0"
description = "Algofusion document processing pipeline"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "loguru>=0.7,<1.0",
  "orjson>=3.10,<4.0",
  "rapidfuzz>=3.9,<4.0",
  "polars>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
worker = [
  "redis>=5,<8",
  "numpy>=2.0,<3.0",
  "opencv-python-headless>=4.11,<5.0",
  "Pillow>=10,<13",
  "PyMuPDF>=1.27,<2.0",
  "surya-ocr>=0.17,<1.0",
  "transformers>=4.57,<5.0",
  "tokenizers>=0.22,<1.0",
]
ui = [
  "streamlit>=1.55,<2.0",
  "streamlit-autorefresh>=1.0,<2.0",
  "pandas>=2.3,<3.0",
  "pyarrow>=23,<24",
  "openpyxl>=3.1,<4.0",
]
api = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "redis>=5,<8",
]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.4,<1.0",
  "mypy>=1.10,<2.0",
  "pre-commit>=3.7,<4.0",
  "typer>=0.12,<1.0",
  "rich>=13.0,<14.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"shared.resources" = ["dictionaries/*.yaml", "review/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [
  ".",
  "workers/OCR-Sergei/PIPELINE_V2",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "shared/files",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
  "shared/files/",
]
